scrollbar fixex

--- a/src/assets/css/reservation-results.css
+++ b/src/assets/css/reservation-results.css
@@ -25,6 +25,7 @@
 .reservation-sidebar .accordion-body > ul{
     max-height: 200px;
     overflow-y: auto;
+    padding: 5px 0;
     margin-bottom: 15px;
 }
     .reservation-sidebar ::-webkit-scrollbar {
